--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
 
     <dependencies>
 
-
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifact Id>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
